--- a/src/main/resources/view/DashboardForm.fxml
+++ b/src/main/resources/view/DashboardForm.fxml
@@ -36,7 +36,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <JFXButton fx:id="btnCustomers" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="91.0" onAction="#CustomersButtonOnAction" prefHeight="55.0" prefWidth="200.0" ripplerFill="#f4ce14" style="-fx-border-color: #A9A9A9; -fx-border-radius: 10; -fx-background-color: BLACK;" text="Customers" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnCustomers" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="91.0" onAction="#CustomersButtonOnAction" prefHeight="55.0" prefWidth="206.0" ripplerFill="#b5592a" style="-fx-border-color: #A9A9A9; -fx-border-radius: 10; -fx-background-color: BLACK;" text="Customers" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="24.0" />
                </font>
@@ -51,7 +51,7 @@
                   <ColorAdjust brightness="-1.0" contrast="1.0" hue="-1.0" saturation="-1.0" />
                </effect>
             </JFXButton>
-            <JFXButton fx:id="btnOrders" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="245.0" onAction="#OrdersButtonOnAction" prefHeight="55.0" prefWidth="200.0" ripplerFill="#f75f28" style="-fx-border-color: #A9A9A9; -fx-border-radius: 10; -fx-background-color: BLACK;" text="Orders" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnOrders" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="245.0" onAction="#OrdersButtonOnAction" prefHeight="55.0" prefWidth="206.0" ripplerFill="#f75f28" style="-fx-border-color: #A9A9A9; -fx-border-radius: 10; -fx-background-color: BLACK;" text="Orders" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="24.0" />
                </font>
@@ -66,7 +66,7 @@
                   <ColorAdjust brightness="-1.0" contrast="1.0" hue="-1.0" saturation="-1.0" />
                </effect>
             </JFXButton>
-            <JFXButton fx:id="btnItems" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="169.0" onAction="#ItemsButtonOnAction" prefHeight="55.0" prefWidth="200.0" ripplerFill="#2a5df5" style="-fx-border-color: #A9A9A9; -fx-border-radius: 10; -fx-background-color: BLACK;" text="Items" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnItems" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="169.0" onAction="#ItemsButtonOnAction" prefHeight="55.0" prefWidth="206.0" ripplerFill="#cd113b" style="-fx-border-color: #A9A9A9; -fx-border-radius: 10; -fx-background-color: BLACK;" text="Items" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="24.0" />
                </font>
@@ -96,22 +96,22 @@
                   <ColorAdjust brightness="-1.0" contrast="1.0" hue="-1.0" saturation="-1.0" />
                </effect>
             </JFXButton>
-            <Label fx:id="lblDate" layoutX="98.0" layoutY="410.0" textFill="WHITE">
+            <Label fx:id="lblDate" layoutX="97.0" layoutY="420.0" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="57.0" layoutY="410.0" text="Date :  " textFill="WHITE">
+            <Label layoutX="49.0" layoutY="420.0" text="Date :  " textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="lblTime" layoutX="638.0" layoutY="418.0" textFill="WHITE">
+            <Label fx:id="lblTime" layoutX="637.0" layoutY="420.0" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="596.0" layoutY="418.0" text="Time :  " textFill="WHITE">
+            <Label layoutX="595.0" layoutY="420.0" text="Time :  " textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="15.0" />
                </font>
