--- a/src/main/resources/view/ItemsForm.fxml
+++ b/src/main/resources/view/ItemsForm.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
+<?import java.lang.String?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tooltip?>
@@ -185,7 +186,7 @@
                   </RadialGradient>
                </ripplerFill>
             </JFXButton>
-            <JFXTreeTableView id="#tblItems" fx:id="tblItems" layoutX="205.0" layoutY="81.0" prefHeight="309.0" prefWidth="519.0" style="-fx-selection-bar: #CD113B; -fx-selection-bar-text-fill: white; -fx-font-weight: bold;" styleClass="table-row-cell:selected" stylesheets="@style.css">
+            <JFXTreeTableView id="#tblItems" fx:id="tblItems" layoutX="205.0" layoutY="81.0" prefHeight="309.0" prefWidth="519.0" style="-fx-selection-bar: #CD113B; -fx-font-weight: bold; -fx-border-color: #A9A9A9; -fx-border-radius: 5;" stylesheets="@style.css">
                <columns>
                   <TreeTableColumn fx:id="colItemCode" prefWidth="73.0" text="Item Code" />
                   <TreeTableColumn fx:id="colItemDescription" prefWidth="184.0" text="Item Description" />
@@ -193,6 +194,10 @@
                   <TreeTableColumn fx:id="colQuantity" prefWidth="76.0" text="Quantity" />
                   <TreeTableColumn fx:id="colOption" prefWidth="84.0" text="Option" />
                </columns>
+               <styleClass>
+                  <String fx:value="table-row-cell:selected" />
+                  <String fx:value="table-view" />
+               </styleClass>
             </JFXTreeTableView>
          </children>
       </AnchorPane>
