--- a/src/main/resources/view/CustomerForm.fxml
+++ b/src/main/resources/view/CustomerForm.fxml
@@ -24,7 +24,7 @@
             <Image url="@../images/img_31.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="42.0" layoutY="46.0" opacity="0.82" prefHeight="457.0" prefWidth="739.0" style="-fx-background-color: #FFFFFF; -fx-border-radius: 5; -fx-background-radius: 5;">
+      <AnchorPane layoutX="42.0" layoutY="44.0" opacity="0.82" prefHeight="457.0" prefWidth="739.0" style="-fx-background-color: #FFFFFF; -fx-border-radius: 5; -fx-background-radius: 5;">
          <children>
             <AnchorPane blendMode="HARD_LIGHT" prefHeight="60.0" prefWidth="739.0" style="-fx-background-color: #164863; -fx-background-radius: 5;">
                <children>
@@ -58,12 +58,12 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <Label layoutX="16.0" layoutY="178.0" text="Customer ID">
+            <Label layoutX="16.0" layoutY="150.0" text="Customer ID">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtCustomerID" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="196.0" prefHeight="29.0" prefWidth="165.0" unFocusColor="#d0c4c4">
+            <JFXTextField fx:id="txtCustomerID" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="168.0" prefHeight="29.0" prefWidth="165.0" unFocusColor="#d0c4c4">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -74,12 +74,12 @@
                   <Tooltip text="Enter customer ID here" />
                </tooltip>
             </JFXTextField>
-            <Label layoutX="16.0" layoutY="239.0" text="Customer Name">
+            <Label layoutX="16.0" layoutY="211.0" text="Customer Name">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtCustomerName" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="258.0" prefHeight="29.0" prefWidth="165.0">
+            <JFXTextField fx:id="txtCustomerName" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="230.0" prefHeight="29.0" prefWidth="165.0">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -90,12 +90,12 @@
                   <Tooltip text="Enter customer name here" />
                </tooltip>
             </JFXTextField>
-            <Label layoutX="16.0" layoutY="302.0" text="Customer Address">
+            <Label layoutX="16.0" layoutY="274.0" text="Customer Address">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtCustomerAddress" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="320.0" prefHeight="29.0" prefWidth="165.0">
+            <JFXTextField fx:id="txtCustomerAddress" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="292.0" prefHeight="29.0" prefWidth="165.0">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -106,12 +106,12 @@
                   <Tooltip text="Enter customer address here" />
                </tooltip>
             </JFXTextField>
-            <Label layoutX="16.0" layoutY="364.0" text="Customer Salary">
+            <Label layoutX="16.0" layoutY="336.0" text="Customer Salary">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtCustomerSalary" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="385.0" prefHeight="29.0" prefWidth="165.0">
+            <JFXTextField fx:id="txtCustomerSalary" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="357.0" prefHeight="29.0" prefWidth="165.0">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -122,7 +122,7 @@
                   <Tooltip text="Enter customer salary here" />
                </tooltip>
             </JFXTextField>
-            <JFXButton fx:id="btnRefresh" alignment="CENTER" blendMode="EXCLUSION" buttonType="RAISED" contentDisplay="CENTER" layoutX="524.0" layoutY="404.0" onAction="#RefreshButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #A9A9A9; -fx-border-radius: 5; -fx-background-color: #B5592A;" text="REFRESH" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnRefresh" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="520.0" layoutY="404.0" onAction="#RefreshButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #164863; -fx-border-radius: 5; -fx-background-color: #164863;" text="REFRESH" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
@@ -135,32 +135,7 @@
                   </RadialGradient>
                </ripplerFill>
             </JFXButton>
-            <AnchorPane layoutX="16.0" layoutY="79.0" prefHeight="76.0" prefWidth="165.0" style="-fx-border-color: BLACK; -fx-border-radius: 5;">
-               <children>
-                  <Label layoutX="23.0" layoutY="12.0" text="Search Customer">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font>
-                  </Label>
-                  <JFXTextField fx:id="txtSearchCustomer" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="23.0" layoutY="35.0" prefHeight="29.0" prefWidth="119.0">
-                     <font>
-                        <Font name="System Italic" size="13.0" />
-                     </font>
-                     <effect>
-                        <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-                     </effect>
-                     <tooltip>
-                        <Tooltip text="Search customer here" />
-                     </tooltip>
-                  </JFXTextField>
-                  <ImageView fitHeight="31.0" fitWidth="23.0" layoutX="129.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/icons8-search.gif" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
-            <JFXButton fx:id="btnUpdate" alignment="CENTER" blendMode="EXCLUSION" buttonType="RAISED" contentDisplay="CENTER" layoutX="422.0" layoutY="404.0" onAction="#UpdateButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #A9A9A9; -fx-border-radius: 5; -fx-background-color: #B5592A;" text="UPDATE" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnUpdate" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="418.0" layoutY="404.0" onAction="#UpdateButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #164863; -fx-border-radius: 5; -fx-background-color: #164863;" text="UPDATE" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
@@ -173,7 +148,7 @@
                   </RadialGradient>
                </ripplerFill>
             </JFXButton>
-            <JFXButton fx:id="btnSave" alignment="CENTER" blendMode="EXCLUSION" buttonType="RAISED" contentDisplay="CENTER" layoutX="320.0" layoutY="404.0" onAction="#SaveButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #A9A9A9; -fx-border-radius: 5; -fx-background-color: #B5592A;" text="SAVE" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnSave" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="316.0" layoutY="404.0" onAction="#SaveButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #164863; -fx-border-radius: 5; -fx-background-color: #164863;" text="SAVE" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
@@ -186,7 +161,7 @@
                   </RadialGradient>
                </ripplerFill>
             </JFXButton>
-            <JFXTreeTableView id="#tblCustomers" fx:id="tblCustomers" layoutX="205.0" layoutY="79.0" prefHeight="311.0" prefWidth="519.0" style="-fx-selection-bar: #B5592A; -fx-font-weight: BOLD; -fx-border-radius: 5; -fx-border-color: #A9A9A9;" stylesheets="@style.css">
+            <JFXTreeTableView id="#tblCustomers" fx:id="tblCustomers" layoutX="205.0" layoutY="82.0" prefHeight="311.0" prefWidth="519.0" style="-fx-selection-bar: #B5592A; -fx-font-weight: BOLD; -fx-border-radius: 5; -fx-border-color: #A9A9A9;" stylesheets="@style.css">
                <columns>
                   <TreeTableColumn fx:id="colCustomerID" prefWidth="79.0" text="Customer ID" />
                   <TreeTableColumn fx:id="colCustomerName" prefWidth="117.0" text="Customer Name" />
@@ -199,6 +174,22 @@
                   <String fx:value="table-view" />
                </styleClass>
             </JFXTreeTableView>
+            <JFXTextField fx:id="txtSearchCustomer" alignment="CENTER" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="86.0" prefHeight="29.0" prefWidth="165.0" promptText="Search customer...">
+               <font>
+                  <Font name="System Italic" size="13.0" />
+               </font>
+               <effect>
+                  <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
+               </effect>
+               <tooltip>
+                  <Tooltip text="Search customer here" />
+               </tooltip>
+            </JFXTextField>
+            <ImageView fitHeight="31.0" fitWidth="23.0" layoutX="18.0" layoutY="82.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-search.gif" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
