--- a/src/main/resources/view/DashboardForm.fxml
+++ b/src/main/resources/view/DashboardForm.fxml
@@ -36,7 +36,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <JFXButton fx:id="btnCustomers" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="91.0" onAction="#CustomersButtonOnAction" prefHeight="55.0" prefWidth="206.0" ripplerFill="#164863" style="-fx-border-color: #A9A9A9; -fx-border-radius: 10; -fx-background-color: BLACK;" text="Customers" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnCustomers" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="91.0" onAction="#CustomersButtonOnAction" prefHeight="55.0" prefWidth="206.0" ripplerFill="#6b240c" style="-fx-border-color: #A9A9A9; -fx-border-radius: 10; -fx-background-color: BLACK;" text="Customers" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="24.0" />
                </font>
@@ -51,7 +51,7 @@
                   <ColorAdjust brightness="-1.0" contrast="1.0" hue="-1.0" saturation="-1.0" />
                </effect>
             </JFXButton>
-            <JFXButton fx:id="btnOrders" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="245.0" onAction="#OrdersButtonOnAction" prefHeight="55.0" prefWidth="206.0" ripplerFill="#f75f28" style="-fx-border-color: #A9A9A9; -fx-border-radius: 10; -fx-background-color: BLACK;" text="Orders" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnOrders" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="245.0" onAction="#OrdersButtonOnAction" prefHeight="55.0" prefWidth="206.0" ripplerFill="#005b41" style="-fx-border-color: #A9A9A9; -fx-border-radius: 10; -fx-background-color: BLACK;" text="Orders" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="24.0" />
                </font>
@@ -81,7 +81,7 @@
                   <ColorAdjust brightness="-1.0" contrast="1.0" hue="-1.0" saturation="-1.0" />
                </effect>
             </JFXButton>
-            <JFXButton fx:id="btnPlaceOrder" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="324.0" onAction="#PlaceOrderButtonOnAction" prefHeight="55.0" prefWidth="206.0" ripplerFill="#60bf2e" style="-fx-border-radius: 10; -fx-border-color: #A9A9A9; -fx-background-color: BLACK;" text="Place Order" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnPlaceOrder" alignment="BASELINE_LEFT" buttonType="RAISED" focusTraversable="false" layoutX="75.0" layoutY="324.0" onAction="#PlaceOrderButtonOnAction" prefHeight="55.0" prefWidth="206.0" ripplerFill="#164863" style="-fx-border-radius: 10; -fx-border-color: #A9A9A9; -fx-background-color: BLACK;" text="Place Order" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="24.0" />
                </font>
