--- a/src/main/resources/view/PlaceOrderForm.fxml
+++ b/src/main/resources/view/PlaceOrderForm.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
 <?import java.lang.String?>
@@ -17,16 +18,16 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="545.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ItemsFormController">
+<AnchorPane fx:id="placeOrderPane" prefHeight="578.0" prefWidth="853.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PlaceOrderFormController">
    <children>
-      <ImageView fx:id="itemPane" fitHeight="556.0" fitWidth="823.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="itemPane" fitHeight="578.0" fitWidth="869.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/img_13.png" />
+            <Image url="@../images/img_45.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="42.0" layoutY="46.0" opacity="0.82" prefHeight="457.0" prefWidth="739.0" style="-fx-background-color: #FFFFFF; -fx-border-radius: 5; -fx-background-radius: 5;">
+      <AnchorPane layoutX="43.0" layoutY="39.0" opacity="0.82" prefHeight="500.0" prefWidth="780.0" style="-fx-background-color: #FFFFFF; -fx-border-radius: 5; -fx-background-radius: 5;">
          <children>
-            <AnchorPane blendMode="HARD_LIGHT" prefHeight="60.0" prefWidth="739.0" style="-fx-background-color: #45474B; -fx-background-radius: 5;">
+            <AnchorPane blendMode="HARD_LIGHT" prefHeight="60.0" prefWidth="780.0" style="-fx-background-color: #6B240C; -fx-background-radius: 5;">
                <children>
                   <JFXButton fx:id="btnBack" alignment="CENTER" contentDisplay="GRAPHIC_ONLY" focusTraversable="false" layoutX="14.0" layoutY="7.0" onAction="#BackButtonOnAction" prefHeight="39.0" prefWidth="38.0">
                      <cursor>
@@ -43,7 +44,7 @@
                         </ImageView>
                      </graphic>
                   </JFXButton>
-                  <Label alignment="CENTER" blendMode="COLOR_BURN" contentDisplay="CENTER" layoutX="326.0" layoutY="13.0" text="Items" textAlignment="CENTER" underline="true">
+                  <Label alignment="CENTER" blendMode="HARD_LIGHT" contentDisplay="CENTER" layoutX="293.0" layoutY="13.0" text="Place Order" textAlignment="CENTER" underline="true">
                      <font>
                         <Font name="Showcard Gothic" size="30.0" />
                      </font>
@@ -51,19 +52,32 @@
                         <ColorAdjust brightness="-1.0" contrast="1.0" />
                      </effect>
                   </Label>
-                  <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="690.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="731.0" layoutY="13.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/img_15.png" />
+                        <Image url="@../images/img_23.png" />
                      </image>
                   </ImageView>
                </children>
             </AnchorPane>
-            <Label layoutX="16.0" layoutY="151.0" text="Item Code">
+            <Label layoutX="19.0" layoutY="77.0" text="Customer ID">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtItemCode" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="169.0" prefHeight="29.0" prefWidth="165.0">
+            <JFXComboBox fx:id="cmbCustomerID" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="95.0" prefHeight="29.0" prefWidth="195.0">
+               <effect>
+                  <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
+               </effect>
+               <tooltip>
+                  <Tooltip text="Enter customer ID here" />
+               </tooltip>
+            </JFXComboBox>
+            <Label layoutX="19.0" layoutY="138.0" text="Customer Name">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <JFXTextField fx:id="txtCustomerName" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="156.0" prefHeight="29.0" prefWidth="195.0">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -71,15 +85,28 @@
                   <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
                </effect>
                <tooltip>
-                  <Tooltip text="Enter item code here" />
+                  <Tooltip text="Enter customer name here" />
                </tooltip>
             </JFXTextField>
-            <Label layoutX="16.0" layoutY="212.0" text="Item Description">
+            <Label layoutX="19.0" layoutY="199.0" text="Item Code">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtItemDescription" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="231.0" prefHeight="29.0" prefWidth="165.0">
+            <JFXComboBox fx:id="cmbItemCode" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="217.0" prefHeight="29.0" prefWidth="195.0">
+               <effect>
+                  <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
+               </effect>
+               <tooltip>
+                  <Tooltip text="Enter item code here" />
+               </tooltip>
+            </JFXComboBox>
+            <Label layoutX="19.0" layoutY="260.0" text="Item Description">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <JFXTextField fx:id="txtItemDescription" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="279.0" prefHeight="29.0" prefWidth="195.0">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -90,12 +117,12 @@
                   <Tooltip text="Enter item description here" />
                </tooltip>
             </JFXTextField>
-            <Label layoutX="16.0" layoutY="275.0" text="Unit Price">
+            <Label layoutX="19.0" layoutY="323.0" text="Unit Price">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtUnitPrice" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="293.0" prefHeight="29.0" prefWidth="165.0">
+            <JFXTextField fx:id="txtUnitPrice" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="341.0" prefHeight="29.0" prefWidth="195.0">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -106,12 +133,12 @@
                   <Tooltip text="Enter unit price here" />
                </tooltip>
             </JFXTextField>
-            <Label layoutX="16.0" layoutY="337.0" text="Quantity on Hand">
+            <Label layoutX="19.0" layoutY="385.0" text="Buying Quantity">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtQuantityOnHand" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="358.0" prefHeight="29.0" prefWidth="165.0">
+            <JFXTextField fx:id="txtBuyingQuantity" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="406.0" prefHeight="29.0" prefWidth="195.0">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -119,10 +146,10 @@
                   <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
                </effect>
                <tooltip>
-                  <Tooltip text="Enter quantity on hand here" />
+                  <Tooltip text="Enter buying quantity here" />
                </tooltip>
             </JFXTextField>
-            <JFXButton fx:id="btnRefresh" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="520.0" layoutY="404.0" onAction="#RefreshButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #45474B; -fx-border-radius: 5; -fx-background-color: #45474B;" text="REFRESH" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnPlaceOrder" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="567.0" layoutY="449.0" onAction="#PlaceOrderButtonOnAction" prefHeight="32.0" prefWidth="195.0" style="-fx-border-color: #6B240C; -fx-border-radius: 5; -fx-background-color: #6B240C;" text="PLACE ORDER" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
@@ -135,7 +162,7 @@
                   </RadialGradient>
                </ripplerFill>
             </JFXButton>
-            <JFXButton fx:id="btnUpdate" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="418.0" layoutY="404.0" onAction="#UpdateButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #45474B; -fx-border-radius: 5; -fx-background-color: #45474B;" text="UPDATE" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnAddToCart" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="19.0" layoutY="449.0" onAction="#AddToCartButtonOnAction" prefHeight="32.0" prefWidth="195.0" style="-fx-border-color: #6B240C; -fx-border-radius: 5; -fx-background-color: #6B240C;" text="ADD TO CART" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
@@ -148,20 +175,7 @@
                   </RadialGradient>
                </ripplerFill>
             </JFXButton>
-            <JFXButton fx:id="btnSave" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="316.0" layoutY="404.0" onAction="#SaveButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #45474B; -fx-border-radius: 5; -fx-background-color: #45474B;" text="SAVE" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Leelawadee UI Bold" size="14.0" />
-               </font>
-               <ripplerFill>
-                  <RadialGradient centerX="0.5833333333333334" centerY="0.5" radius="0.5">
-                     <stops>
-                        <Stop color="BLACK" />
-                        <Stop color="#685d5d" offset="1.0" />
-                     </stops>
-                  </RadialGradient>
-               </ripplerFill>
-            </JFXButton>
-            <JFXTreeTableView id="#tblItems" fx:id="tblItems" layoutX="205.0" layoutY="82.0" prefHeight="309.0" prefWidth="519.0" style="-fx-selection-bar: #CD113B; -fx-font-weight: bold; -fx-border-color: #A9A9A9; -fx-border-radius: 5;" stylesheets="@style.css">
+            <JFXTreeTableView id="#tblItems" fx:id="tblItems" layoutX="243.0" layoutY="81.0" prefHeight="352.0" prefWidth="519.0" style="-fx-selection-bar: #CD113B; -fx-font-weight: bold; -fx-border-color: #A9A9A9; -fx-border-radius: 5;" stylesheets="@style.css">
                <columns>
                   <TreeTableColumn fx:id="colItemCode" prefWidth="73.0" text="Item Code" />
                   <TreeTableColumn fx:id="colItemDescription" prefWidth="184.0" text="Item Description" />
@@ -174,22 +188,16 @@
                   <String fx:value="table-view" />
                </styleClass>
             </JFXTreeTableView>
-            <JFXTextField fx:id="txtSearchItem" alignment="CENTER" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="83.0" prefHeight="29.0" prefWidth="165.0" promptText="Search item...">
+            <Label layoutX="243.0" layoutY="455.0" text="Total : ">
                <font>
-                  <Font name="System Italic" size="13.0" />
+                  <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
-               <effect>
-                  <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-               </effect>
-               <tooltip>
-                  <Tooltip text="Search item here" />
-               </tooltip>
-            </JFXTextField>
-            <ImageView fitHeight="31.0" fitWidth="23.0" layoutX="18.0" layoutY="82.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons8-search.gif" />
-               </image>
-            </ImageView>
+            </Label>
+            <Label layoutX="293.0" layoutY="455.0" text="0.00">
+               <font>
+                  <Font name="Leelawadee UI Bold" size="14.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
