Implemented loading of item codes and customer IDs into combo boxes. Automatically fetches customer names corresponding to customer IDs and item descriptions along with unit prices relevant to item codes.

--- a/src/main/resources/view/PlaceOrderForm.fxml
+++ b/src/main/resources/view/PlaceOrderForm.fxml
@@ -18,16 +18,16 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="placeOrderPane" prefHeight="578.0" prefWidth="853.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PlaceOrderFormController">
+<AnchorPane fx:id="placeOrderPane" prefHeight="619.0" prefWidth="928.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PlaceOrderFormController">
    <children>
-      <ImageView fx:id="itemPane" fitHeight="578.0" fitWidth="869.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="itemPane" fitHeight="619.0" fitWidth="934.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/img_45.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="43.0" layoutY="39.0" opacity="0.82" prefHeight="500.0" prefWidth="780.0" style="-fx-background-color: #FFFFFF; -fx-border-radius: 5; -fx-background-radius: 5;">
+      <AnchorPane layoutX="48.0" layoutY="37.0" opacity="0.82" prefHeight="545.0" prefWidth="832.0" style="-fx-background-color: #FFFFFF; -fx-border-radius: 5; -fx-background-radius: 5;">
          <children>
-            <AnchorPane blendMode="HARD_LIGHT" prefHeight="60.0" prefWidth="780.0" style="-fx-background-color: #6B240C; -fx-background-radius: 5;">
+            <AnchorPane blendMode="HARD_LIGHT" prefHeight="60.0" prefWidth="832.0" style="-fx-background-color: #6B240C; -fx-background-radius: 5;">
                <children>
                   <JFXButton fx:id="btnBack" alignment="CENTER" contentDisplay="GRAPHIC_ONLY" focusTraversable="false" layoutX="14.0" layoutY="7.0" onAction="#BackButtonOnAction" prefHeight="39.0" prefWidth="38.0">
                      <cursor>
@@ -52,19 +52,19 @@
                         <ColorAdjust brightness="-1.0" contrast="1.0" />
                      </effect>
                   </Label>
-                  <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="731.0" layoutY="13.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="783.0" layoutY="13.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/img_23.png" />
                      </image>
                   </ImageView>
                </children>
             </AnchorPane>
-            <Label layoutX="19.0" layoutY="77.0" text="Customer ID">
+            <Label layoutX="19.0" layoutY="117.0" text="Customer ID">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXComboBox fx:id="cmbCustomerID" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="95.0" prefHeight="29.0" prefWidth="195.0">
+            <JFXComboBox fx:id="cmbCustomerID" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="135.0" prefHeight="29.0" prefWidth="195.0">
                <effect>
                   <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
                </effect>
@@ -72,12 +72,12 @@
                   <Tooltip text="Enter customer ID here" />
                </tooltip>
             </JFXComboBox>
-            <Label layoutX="19.0" layoutY="138.0" text="Customer Name">
+            <Label layoutX="19.0" layoutY="178.0" text="Customer Name">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtCustomerName" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="156.0" prefHeight="29.0" prefWidth="195.0">
+            <JFXTextField fx:id="txtCustomerName" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="196.0" prefHeight="29.0" prefWidth="195.0">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -88,12 +88,12 @@
                   <Tooltip text="Enter customer name here" />
                </tooltip>
             </JFXTextField>
-            <Label layoutX="19.0" layoutY="199.0" text="Item Code">
+            <Label layoutX="19.0" layoutY="239.0" text="Item Code">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXComboBox fx:id="cmbItemCode" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="217.0" prefHeight="29.0" prefWidth="195.0">
+            <JFXComboBox fx:id="cmbItemCode" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="257.0" prefHeight="29.0" prefWidth="195.0">
                <effect>
                   <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
                </effect>
@@ -101,12 +101,12 @@
                   <Tooltip text="Enter item code here" />
                </tooltip>
             </JFXComboBox>
-            <Label layoutX="19.0" layoutY="260.0" text="Item Description">
+            <Label layoutX="19.0" layoutY="300.0" text="Item Description">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtItemDescription" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="279.0" prefHeight="29.0" prefWidth="195.0">
+            <JFXTextField fx:id="txtItemDescription" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="319.0" prefHeight="29.0" prefWidth="195.0">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -117,12 +117,12 @@
                   <Tooltip text="Enter item description here" />
                </tooltip>
             </JFXTextField>
-            <Label layoutX="19.0" layoutY="323.0" text="Unit Price">
+            <Label layoutX="19.0" layoutY="363.0" text="Unit Price">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtUnitPrice" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="341.0" prefHeight="29.0" prefWidth="195.0">
+            <JFXTextField fx:id="txtUnitPrice" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="381.0" prefHeight="29.0" prefWidth="195.0">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -133,12 +133,12 @@
                   <Tooltip text="Enter unit price here" />
                </tooltip>
             </JFXTextField>
-            <Label layoutX="19.0" layoutY="385.0" text="Buying Quantity">
+            <Label layoutX="19.0" layoutY="425.0" text="Buying Quantity">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtBuyingQuantity" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="406.0" prefHeight="29.0" prefWidth="195.0">
+            <JFXTextField fx:id="txtBuyingQuantity" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="19.0" layoutY="446.0" prefHeight="29.0" prefWidth="195.0">
                <font>
                   <Font name="System Italic" size="13.0" />
                </font>
@@ -149,7 +149,7 @@
                   <Tooltip text="Enter buying quantity here" />
                </tooltip>
             </JFXTextField>
-            <JFXButton fx:id="btnPlaceOrder" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="567.0" layoutY="449.0" onAction="#PlaceOrderButtonOnAction" prefHeight="32.0" prefWidth="195.0" style="-fx-border-color: #6B240C; -fx-border-radius: 5; -fx-background-color: #6B240C;" text="PLACE ORDER" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnPlaceOrder" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="613.0" layoutY="489.0" onAction="#PlaceOrderButtonOnAction" prefHeight="32.0" prefWidth="195.0" style="-fx-border-color: #6B240C; -fx-border-radius: 5; -fx-background-color: #6B240C;" text="PLACE ORDER" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
@@ -162,7 +162,7 @@
                   </RadialGradient>
                </ripplerFill>
             </JFXButton>
-            <JFXButton fx:id="btnAddToCart" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="19.0" layoutY="449.0" onAction="#AddToCartButtonOnAction" prefHeight="32.0" prefWidth="195.0" style="-fx-border-color: #6B240C; -fx-border-radius: 5; -fx-background-color: #6B240C;" text="ADD TO CART" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnAddToCart" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="19.0" layoutY="489.0" onAction="#AddToCartButtonOnAction" prefHeight="32.0" prefWidth="195.0" style="-fx-border-color: #6B240C; -fx-border-radius: 5; -fx-background-color: #6B240C;" text="ADD TO CART" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
@@ -175,25 +175,35 @@
                   </RadialGradient>
                </ripplerFill>
             </JFXButton>
-            <JFXTreeTableView id="#tblItems" fx:id="tblItems" layoutX="243.0" layoutY="81.0" prefHeight="352.0" prefWidth="519.0" style="-fx-selection-bar: #CD113B; -fx-font-weight: bold; -fx-border-color: #A9A9A9; -fx-border-radius: 5;" stylesheets="@style.css">
+            <JFXTreeTableView id="#tblItems" fx:id="tblItems" layoutX="243.0" layoutY="81.0" prefHeight="394.0" prefWidth="565.0" style="-fx-selection-bar: #CD113B; -fx-font-weight: bold; -fx-border-color: #A9A9A9; -fx-border-radius: 5;" stylesheets="@style.css">
                <columns>
                   <TreeTableColumn fx:id="colItemCode" prefWidth="73.0" text="Item Code" />
-                  <TreeTableColumn fx:id="colItemDescription" prefWidth="184.0" text="Item Description" />
+                  <TreeTableColumn fx:id="colItemDescription" prefWidth="238.0" text="Item Description" />
                   <TreeTableColumn fx:id="colUnitPrice" prefWidth="91.0" text="Unit Price" />
                   <TreeTableColumn fx:id="colQuantity" prefWidth="76.0" text="Quantity" />
-                  <TreeTableColumn fx:id="colOption" prefWidth="84.0" text="Option" />
+                  <TreeTableColumn fx:id="colOption" prefWidth="76.0" text="Option" />
                </columns>
                <styleClass>
                   <String fx:value="table-row-cell:selected" />
                   <String fx:value="table-view" />
                </styleClass>
             </JFXTreeTableView>
-            <Label layoutX="243.0" layoutY="455.0" text="Total : ">
+            <Label layoutX="243.0" layoutY="495.0" text="Total : ">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="293.0" layoutY="455.0" text="0.00">
+            <Label fx:id="txtTotal" layoutX="293.0" layoutY="495.0" text="0.00">
+               <font>
+                  <Font name="Leelawadee UI Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="19.0" layoutY="81.0" text="Order ID : ">
+               <font>
+                  <Font name="Leelawadee UI Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="txtOrderId" layoutX="89.0" layoutY="81.0">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
